# rirmega

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  LICENSE-DATASET.txt  README.md  pyproject.toml  setup.cfg
rirmega/: cli.py
scripts/: baseline_dereverb.py  hf_loader.py  rir_validation_v3.py  rir_visual_check.py
